# task_telegram_scheduler_messages

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 7812d7a63484_.py  8111fa42ec8f_.py
src/tg_assistant/: app.py  client.py  config.py  database.py  logger.py  schema.py
src/tg_assistant/assistant/: clients.py
src/tg_assistant/assistant/plugins/: handlers.py
src/tg_assistant/users/: models.py  repo.py  schema.py  service.py
