[project]
name = ""
version = ""
description = ""
authors = [
    {name = "c4chula", email = "henry.foster71@yahoo.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "pytest>=7.4.3",
    "black>=23.11.0",
]
