[project]
name = ""
version = ""
description = ""
authors = [
    {name = "c4chula", email = "henry.foster71@yahoo.com"},
]
dependencies = [
    "sqlalchemy>=2.0.23",
    "pyrogram>=2.0.106",
    "loguru>=0.7.2",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "pytest>=7.4.3",
    "black>=23.11.0",
]
